# SD-VehicleInterface

./: README.md  can_setup.sh  vcan_setup.sh
docker/: Dockerfile  Dockerfile.cpu  README.md  run.sh  tmux-start.sh
sd_msgs/: CMakeLists.txt  package.xml
sd_msgs/msg/: SDControl.msg
vehicle_interface/: CMakeLists.txt  package.xml
vehicle_interface/include/socketcan_bridge/: socketcan_to_topic.h  topic_to_socketcan.h
vehicle_interface/launch/: sd_vehicle_interface.launch.xml
vehicle_interface/src/sd_vehicle_interface/: sd_control.cpp  sd_control.h  sd_gps_imu.cpp  sd_gps_imu.h  sd_lib_h.h  sd_lib_mcav.h  sd_typedefs.h  sd_vehicle_interface.cpp  sd_vehicle_interface.h
vehicle_interface/src/socketcan_bridge/: socketcan_bridge_node.cpp
